--- a/learn-m365-pr/m365/advanced-ediscovery/index.yml
+++ b/learn-m365-pr/m365/advanced-ediscovery/index.yml
@@ -16,7 +16,7 @@ abstract: |
   - Describe the phases of the Electronic Discovery Reference Model.
   - Identify how in-place holds are applied to data.
   - Describe how to collect, preserve, and analyze data.
-  - Explain how to locate and use the Advanced eDiscovery tools in the Microsoft 365 Compliance Center.
+  - Explain how to locate and use the Advanced eDiscovery tools in the Microsoft Purview compliance portal.
 
 prerequisites: | 
    - Cloud computing concepts
