--- a/learn-m365-pr/m365/advanced-ediscovery/introduction.yml
+++ b/learn-m365-pr/m365/advanced-ediscovery/introduction.yml
@@ -3,7 +3,7 @@ uid: learn-m365.compliance-discover-advanced-ediscovery.introduction
 title: Introduction to eDiscovery
 metadata:
   title: Introduction to eDiscovery
-  description: eDiscovery offers built-in tools such as Content Search to help identify data used as evidence in legal cases. Content Search helps identify relevant data directly in Microsoft 365, reducing the amount of data that customers need to prepare and export to their third-party compliance tools. Advanced eDiscovery builds on the core eDiscovery solution, helping organizations respond more quickly with a streamlined end-to-end eDiscovery workflow, intelligent search capabilities to decrease manual work, and save on third-party storage costs.
+  description: eDiscovery offers built-in tools such as Content Search to help identify data used as evidence in legal cases. Content Search helps identify relevant data directly in Microsoft 365, reducing the amount of data that customers need to prepare and export to their third-party compliance tools. eDiscovery (Premium) builds on the eDiscovery (Standard) solution, helping organizations respond more quickly with a streamlined end-to-end eDiscovery workflow, intelligent search capabilities to decrease manual work, and save on third-party storage costs.
   ms.date: 02/10/2022
   author: beccarobins
   ms.author: beccarobins
