--- a/learn-m365-pr/m365/m365-compliance-insider-manage-insider-risk/summary-knowledge-check.yml
+++ b/learn-m365-pr/m365/m365-compliance-insider-manage-insider-risk/summary-knowledge-check.yml
@@ -3,7 +3,7 @@ uid: learn-m365.m365-compliance-insider-manage-insider-risk.summary-knowledge-ch
 title: Summary and knowledge check
 metadata:
   title: Summary and knowledge check
-  description: Insider risk management in Microsoft 365 helps organizations address internal risks, such as IP theft, fraud, and sabotage. Learn about insider risk management and how Microsoft technologies can help you detect, investigate, and take action on risky activities in your organization. 
+  description: Microsoft Purview Insider Risk Management helps organizations address internal risks, such as IP theft, fraud, and sabotage. Learn about insider risk management and how Microsoft technologies can help you detect, investigate, and take action on risky activities in your organization. 
   ms.date: 07/08/2021
   author: beccarobins
   ms.author: beccarobins
