--- a/learn-m365-pr/m365/compmgmt-learn-concepts/knowledge-check.yml
+++ b/learn-m365-pr/m365/compmgmt-learn-concepts/knowledge-check.yml
@@ -47,7 +47,7 @@ quiz:
         explanation: "Correct. Assessment templates contain the controls and action data needed to track compliance with regulations, standards, and policies."
       - content: "Compliance center"
         isCorrect: false
-        explanation: "Incorrect. Compliance center is your home for managing compliance needs using integrated solutions for information protection, information governance, insider risk management, discovery, and more."
+        explanation: "Incorrect. Compliance center is your home for managing compliance needs using integrated solutions for information protection, Data Lifecycle Management, insider risk management, discovery, and more."
       
     - content: "An improvement action titled *Protect Data in Transit Using Encryption* is included in a Compliance Manager assessment.  What type of action is this?"
       choices:
