--- a/learn-m365-pr/m365/m365-compliance-information-govern-information/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-govern-information/index.yml
@@ -12,9 +12,9 @@ title: Govern information in Microsoft 365
 summary:  Learn how to manage your content lifecycle using solutions to import, store, and classify business-critical data so you can keep what you need and delete what you don't. 
 abstract: |
   Upon completion of this module, you should be able to: 
-  - Discuss the information governance solution and its benefits.
-  - List the customer scenarios the information governance solution addresses. 
-  - Describe the information governance configuration process. 
+  - Discuss the Data Lifecycle Management solution and its benefits.
+  - List the customer scenarios the Data Lifecycle Management solution addresses. 
+  - Describe the Data Lifecycle Management configuration process. 
   - Explain what users will experience when the solution is implemented.
   - Articulate deployment and adoption best practices. 
 
