--- a/learn-m365-pr/m365/m365-compliance-information-govern-information/information-governance-overview.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-govern-information/information-governance-overview.yml
@@ -1,8 +1,8 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.m365-compliance-information-govern-information.overview
-title: Information governance overview
+title: Data Lifecycle Management overview
 metadata:
-  title: Information governance overview
+  title: Data Lifecycle Management overview
   description: Learn how to manage your content lifecycle using solutions to import, store, and classify business-critical data so you can keep what you need and delete what you don't. 
   ms.date: 10/28/2021
   author: beccarobins
