--- a/learn-m365-pr/m365/m365-compliance-information-govern-information/summary-knowledge-check.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-govern-information/summary-knowledge-check.yml
@@ -16,14 +16,14 @@ content: |
 quiz:
     title: Check your knowledge
     questions:
-    - content: "Which of the following describes the most comprehensive approach to information governance and its benefits?"
+    - content: "Which of the following describes the most comprehensive approach to Data Lifecycle Management and its benefits?"
       choices:
       - content: "Securing sensitive data and access."
         isCorrect: false
-        explanation: "This is one benefit of information governance."
+        explanation: "This is one benefit of Data Lifecycle Management."
       - content: "Ensuring your data is defensible and retained."
         isCorrect: false
-        explanation: "This is one benefit of information governance "
+        explanation: "This is one benefit of Data Lifecycle Management "
       - content: "Managing the end-to-end lifecycle of all content across your digital estate. "
         isCorrect: true
         explanation: "A comprehensive approach across all content in your digital estate helps protect confidential information and prevent incidents that could disrupt your business."
