--- a/learn-m365-pr/m365/m365-compliance-information-govern-information/import-data.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-govern-information/import-data.yml
@@ -1,8 +1,8 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.m365-compliance-information-govern-information.import-data
-title: Import data for information governance
+title: Import data for Data Lifecycle Management
 metadata:
-  title: Import data for information governance
+  title: Import data for Data Lifecycle Management
   description: Learn how to manage your content lifecycle using solutions to import, store, and classify business-critical data so you can keep what you need and delete what you don't. 
   ms.date: 07/07/2021
   author: beccarobins
