--- a/learn-m365-pr/m365/m365-compliance-information-govern-information/manage-monitor-remediate.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-govern-information/manage-monitor-remediate.yml
@@ -1,8 +1,8 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.m365-compliance-information-govern-information.manage-monitor-remediate
-title: Manage, monitor, and remediate information governance
+title: Manage, monitor, and remediate Data Lifecycle Management
 metadata:
-  title: Manage, monitor, and remediate information governance
+  title: Manage, monitor, and remediate Data Lifecycle Management
   description:  Learn how to manage your content lifecycle using solutions to import, store, and classify business-critical data so you can keep what you need and delete what you don't. 
   ms.date: 07/19/2021
   author: beccarobins
