--- a/learn-m365-pr/m365/m365-compliance-information-governance/summary-knowledge-check.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/summary-knowledge-check.yml
@@ -59,7 +59,7 @@ quiz:
         explanation: "The Microsoft data loss prevention solution detects sensitive content as it is used and shared throughout your organization, in the cloud and on devices, and helps prevent accidental data loss. "
       - content: "Microsoft Purview Data Lifecycle Management "
         isCorrect: false
-        explanation: "Information governance manages your content lifecycle using solution to import, store, and classify business critical data. Governance policies can be configured to work automatically and applied organization-wide, if desired. For example, the system can be configured to delete obsolete or irrelevant data without user intervention, reducing the amount of data to govern. "
+        explanation: "Data Lifecycle Management manages your content lifecycle using solution to import, store, and classify business critical data. Governance policies can be configured to work automatically and applied organization-wide, if desired. For example, the system can be configured to delete obsolete or irrelevant data without user intervention, reducing the amount of data to govern. "
       - content: "Microsoft information protection solution"
         isCorrect: true
         explanation: "Customers typically want to apply some level of protection to the most sensitive information to prevent it from getting into the wrong hands. This solution helps you discover, classify, and protect sensitive and business critical content throughout its lifecycle across your organization."
@@ -68,7 +68,7 @@ quiz:
       choices:
       - content: "Microsoft Purview Data Lifecycle Management "
         isCorrect: false
-        explanation: "Information governance manages your content lifecycle using solution to import, store, and classify business critical data. Governance policies can be configured to work automatically and applied organization-wide, if desired. For example, the system can be configured to delete obsolete or irrelevant data without user intervention, reducing the amount of data to govern."
+        explanation: "Data Lifecycle Management manages your content lifecycle using solution to import, store, and classify business critical data. Governance policies can be configured to work automatically and applied organization-wide, if desired. For example, the system can be configured to delete obsolete or irrelevant data without user intervention, reducing the amount of data to govern."
       - content: "Microsoft records management "
         isCorrect: true
         explanation: "Records management uses intelligent classification to automate and simplify the retention schedule for regulatory, legal, and business critical records in your organization. Governance policies can be configured to work automatically and applied organization-wide, if desired. For example, the system can be configured to delete obsolete or irrelevant data without user intervention, reducing the amount of data to govern."
