--- a/learn-m365-pr/m365/advanced-audit/index.yml
+++ b/learn-m365-pr/m365/advanced-audit/index.yml
@@ -13,7 +13,7 @@ title: Track user and admin activity with Audit (Premium)
 summary: Microsoft 365 delivers comprehensive audit logs and alerts across more than 15 services, which enables customers to track user and administration activity within their tenants. Improvements in Audit (Premium) include preservation of audit logs for up to a year, faster access to data, and access to crucial events for quicker investigations.
 abstract: |
   Upon completion of this module, you should be able to: 
-  - Describe the preservation improvements that have been made in advanced auditing.
+  - Describe the preservation improvements that have been made in Audit (Premium).
   - Describe the bandwidth improvements that have been made in auditing.
   - Describe the new *MailItemsAccessed* mailbox auditing action and how it can help investigators better understand and identify the scope of compromises to specific mail items that may have been compromised.
 
