Hopefully catches all iterations of DLP

--- a/learn-m365-pr/m365/m365-data-loss-prevention-microsoft-teams/knowledge-check.yml
+++ b/learn-m365-pr/m365/m365-data-loss-prevention-microsoft-teams/knowledge-check.yml
@@ -39,7 +39,7 @@ quiz:
       choices:
       - content: "Ensure that users are licensed for Office 365 Advanced Compliance."
         isCorrect: false
-        explanation: "You need users licensed for Office 365 DLP, which is included in Office 365 E3."
+        explanation: "You need users licensed for Microsoft Purview Data Loss Prevention, which is included in Office 365 E3."
       - content: "Ensure that the setting that enables users to communicate with other Skype for Business and Teams users is on."
         isCorrect: false
         explanation: "This is a setting not related to this issue. Users must be in a Teams Only mode."
