--- a/learn-m365-pr/m365/audit-identity-access-management/index.yml
+++ b/learn-m365-pr/m365/audit-identity-access-management/index.yml
@@ -16,7 +16,7 @@ abstract: |
  - Name the tools and technologies used to control access within Microsoft 365 environments.
  - Explain mandatory prerequisites for granting service team accounts. 
  - Describe Microsoft 365 service teams’ privileged access management process.
- - Explain the process for using Microsoft 365 Customer Lockbox.
+ - Explain the process for using Microsoft Purview Customer Lockbox.
 
 prerequisites: None
 iconUrl: /learn/achievements/understand-microsoft-365-identity-access-management.svg 
