--- a/learn-m365-pr/m365/m365-security-info-overview/info-protection-lifecycle.yml
+++ b/learn-m365-pr/m365/m365-security-info-overview/info-protection-lifecycle.yml
@@ -3,7 +3,7 @@ uid: learn-m365.m365-security-info-overview.info-protection-lifecycle
 title: A day in the life of a file – information protection lifecycle
 metadata:
   title: A day in the life of a file – information protection lifecycle
-  description: Learn how Microsoft information protection technologies protect data from creation to cloud storage.
+  description: Learn how Microsoft Purview Information Protection technologies protect data from creation to cloud storage.
   ms.date: 11/03/2021
   author: beccarobins
   ms.author: beccarobins
