--- a/learn-m365-pr/m365/audit-identity-access-management/customer-lockbox.yml
+++ b/learn-m365-pr/m365/audit-identity-access-management/customer-lockbox.yml
@@ -1,8 +1,8 @@
 ### YamlMime:ModuleUnit
 uid: learn-m365.audit-identity-access-management.customer-lockbox
-title: Understand Microsoft 365 Customer Lockbox
+title: Understand Microsoft Purview Customer Lockbox
 metadata:
-  title: Understand Microsoft 365 Customer Lockbox
+  title: Understand Microsoft Purview Customer Lockbox
   description: Learn how Microsoft 365 implements the principle of Zero Standing Access (ZSA) to protect production environments and customer data using Just-In-Time (JIT) and Just-Enough-Access (JEA).
   ms.date: 01/28/2022
   author: beccarobins
