--- a/learn-m365-pr/m365/m365-compliance-information-manage-records/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-manage-records/index.yml
@@ -12,9 +12,9 @@ title: Manage records in Microsoft 365
 summary:  Learn how to use intelligent classification to automate and simplify the retention schedule for regulatory, legal, and business-critical records in your organization.  
 abstract: |
   Upon completion of this module, you should be able to: 
-  - Discuss the records management solution and its benefits. 
+  - Discuss the Microsoft Purview Records Management solution and its benefits. 
   - List the customer scenarios the records management solution addresses. 
-  - Describe the records management configuration process. 
+  - Describe the Microsoft Purview Records Management configuration process. 
   - Explain what users will experience when the solution is implemented.
   - Articulate deployment and adoption best practices.
 
