--- a/learn-m365-pr/m365/m365-compliance-information-manage-records/index.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-manage-records/index.yml
@@ -13,7 +13,7 @@ summary:  Learn how to use intelligent classification to automate and simplify t
 abstract: |
   Upon completion of this module, you should be able to: 
   - Discuss the Microsoft Purview Records Management solution and its benefits. 
-  - List the customer scenarios the records management solution addresses. 
+  - List the customer scenarios the Microsoft Purview Records Management solution addresses. 
   - Describe the Microsoft Purview Records Management configuration process. 
   - Explain what users will experience when the solution is implemented.
   - Articulate deployment and adoption best practices.
