--- a/learn-m365-pr/m365/advanced-audit/create.yml
+++ b/learn-m365-pr/m365/advanced-audit/create.yml
@@ -3,7 +3,7 @@ uid: learn-m365.compliance-discover-advanced-audit.create
 title: Create audit log retention policies
 metadata:
   title: Create audit log retention policies
-  description: Microsoft 365 delivers comprehensive audit logs and alerts across more than 15 services, which enables customers to track user and administration activity within their tenants. Improvements in Audit (Premium) include preservation of audit logs for up to a year, faster access to data, and access to crucial events for quicker investigations.
+  description: Microsoft 365 delivers comprehensive audit logs and alerts across more than 15 services, which enables customers to track user and administration activity within their tenants. Improvements include preservation of audit logs for up to a year, faster access to data, and access to crucial events for quicker investigations.
   ms.date: 03/03/2022
   author: beccarobins
   ms.author: beccarobins
