--- a/learn-m365-pr/m365/advanced-audit/index.yml
+++ b/learn-m365-pr/m365/advanced-audit/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.prod: learning-m365
   ms.custom: intro-internal
 title: Track user and admin activity with Audit (Premium)
-summary: Microsoft 365 delivers comprehensive audit logs and alerts across more than 15 services, which enables customers to track user and administration activity within their tenants. Improvements in Audit (Premium) include preservation of audit logs for up to a year, faster access to data, and access to crucial events for quicker investigations.
+summary: Microsoft Purview Audit (Premium) delivers comprehensive audit logs and alerts across more than 15 services, which enables customers to track user and administration activity within their tenants. Improvements in Audit (Premium) include preservation of audit logs for up to a year, faster access to data, and access to crucial events for quicker investigations.
 abstract: |
   Upon completion of this module, you should be able to: 
   - Describe the preservation improvements that have been made in Audit (Premium).
