--- a/learn-m365-pr/m365/advanced-audit/index.yml
+++ b/learn-m365-pr/m365/advanced-audit/index.yml
@@ -9,7 +9,7 @@ metadata:
   ms.topic: interactive-tutorial
   ms.prod: learning-m365
   ms.custom: intro-internal
-title: Track user and admin activity with Audit (Premium)
+title: Track user and admin activity with Microsoft Purview Audit (Premium)
 summary: Microsoft Purview Audit (Premium) delivers comprehensive audit logs and alerts across more than 15 services, which enables customers to track user and administration activity within their tenants. Improvements in Audit (Premium) include preservation of audit logs for up to a year, faster access to data, and access to crucial events for quicker investigations.
 abstract: |
   Upon completion of this module, you should be able to: 
