--- a/learn-m365-pr/m365/m365-compliance-information-governance/summary-knowledge-check.yml
+++ b/learn-m365-pr/m365/m365-compliance-information-governance/summary-knowledge-check.yml
@@ -72,7 +72,7 @@ quiz:
       - content: "Microsoft Purview Records Management "
         isCorrect: true
         explanation: "Microsoft Purview Records Management uses intelligent classification to automate and simplify the retention schedule for regulatory, legal, and business critical records in your organization. Governance policies can be configured to work automatically and applied organization-wide, if desired. For example, the system can be configured to delete obsolete or irrelevant data without user intervention, reducing the amount of data to govern."
-      - content: "Microsoft Purview Information Protection solution	"
+      - content: "Microsoft Purview Information Protection"
         isCorrect: false
         explanation: "Customers typically want to apply some level of protection to the most sensitive information to prevent it from getting into the wrong hands. This solution helps you discover, classify, and protect sensitive and business critical content throughout its lifecycle across your organization.  Question: Once you know your data and mapped your data estate, you can take steps to protect it. Which solution helps you discover, classify, and protect sensitive and business critical content throughout its lifecycle across your organization?"
       
